--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="icon" href="./icons/icon-logo.png" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Building Business Website just for fun" />
+    <meta
+      name="keywords"
+      content="Mahdi Samiee, Developer, Designer, front-end"
+    />
+    <meta name="robots" content="index, follow" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="stylesheet"
+      href="./css/tablet.css"
+      media="(min-width:501px) and (max-width: 1024px)"
+    />
+    <link rel="stylesheet" href="./css/tablet.css" media="(max-width:500px)" />
+    <link rel="icon" href="./icons/icon-logo.png" type="image/x-icon" />
     <title>Matt Sam | business Website</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body></body>
 </html>
