--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Building Business Website just for fun" />
+    <meta
+      name="description"
+      content="Building environmental Website just for fun"
+    />
     <meta
       name="keywords"
       content="Mahdi Samiee, Developer, Designer, front-end"
@@ -14,11 +17,37 @@
     <link
       rel="stylesheet"
       href="./css/tablet.css"
-      media="(min-width:501px) and (max-width: 1024px)"
+      media="(min-width:627px) and (max-width: 1024px)"
     />
-    <link rel="stylesheet" href="./css/tablet.css" media="(max-width:500px)" />
+    <link rel="stylesheet" href="./css/mobile.css" media="(max-width:626px)" />
     <link rel="icon" href="./icons/icon-logo.png" type="image/x-icon" />
-    <title>Matt Sam | business Website</title>
+    <title>Matt Sam | Environmental Website</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav class="header-navigation">
+        <div class="left-side">
+          <h1 id="logo">
+            <a href="#logo">Dev</a>
+            <a href="#logo"><img src="./img/logo.png" alt="logo" /></a>
+            <a href="#logo">Matt</a>
+          </h1>
+        </div>
+        <div class="right-side">
+          <ul>
+            <li><a href="#locations">location</a></li>
+            <li><a href="#benefits">benefits</a></li>
+            <li><a href="#contact">contact</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <section class="first-section">
+        <h2>MAKING A WORLD OF DIFFERENCE</h2>
+        <h3>A closer look at who we are, what we do and why we do it</h3>
+        <button>read more</button>
+      </section>
+    </main>
+  </body>
 </html>
