--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <link
       rel="stylesheet"
       href="./css/tablet.css"
-      media="(min-width:551px) and (max-width: 1024px)"
+      media="(min-width:551px) and (max-width: 1256px)"
     />
     <link rel="stylesheet" href="./css/mobile.css" media="(max-width:550px)" />
     <link rel="icon" href="./icons/icon-logo.png" type="image/x-icon" />
     <title>Matt Sam | Environmental Website</title>
   </head>
   <body>
-    <header>
+    <header class="main-header">
       <nav class="header-navigation">
         <div class="left-side">
           <h1 id="logo">
@@ -35,7 +35,7 @@
         </div>
         <div class="right-side">
           <ul>
-            <li><a href="#locations">location</a></li>
+            <li><a href="#locations">locations</a></li>
             <li><a href="#benefits">benefits</a></li>
             <li><a href="#contact">contact</a></li>
           </ul>
@@ -47,6 +47,17 @@
         <h2>MAKING A WORLD OF DIFFERENCE</h2>
         <h3>A closer look at who we are, what we do and why we do it</h3>
         <button>read more</button>
+      </section>
+      <section class="location-section" id="locations">
+        <header class="location-head">
+          <h2>How Our Trash<br />Impacts The Environment</h2>
+          <h4>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente,
+            iste
+          </h4>
+          <img src="./img/cloud.png" class="cloud moving-cloud-1" />
+          <img src="./img/cloud.png" class="cloud moving-cloud-2" />
+        </header>
       </section>
     </main>
   </body>
