add benefit section

--- a/index.html
+++ b/index.html
@@ -4,21 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Building environmental Website just for fun"
-    />
-    <meta
-      name="keywords"
-      content="Mahdi Samiee, Developer, Designer, front-end"
-    />
+    <meta name="description" content="Building environmental Website just for fun"/>
+    <meta name="keywords" content="Mahdi Samiee, Developer, Designer, front-end" />
     <meta name="robots" content="index, follow" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <link
-      rel="stylesheet"
-      href="./css/tablet.css"
-      media="(min-width:551px) and (max-width: 1256px)"
-    />
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/fullscreen.css" media="(min-width:1256px)"/>
+    <link rel="stylesheet" href="./css/tablet.css" media="(min-width:551px) and (max-width: 1255px)"/>
     <link rel="stylesheet" href="./css/mobile.css" media="(max-width:550px)" />
     <link rel="icon" href="./icons/icon-logo.png" type="image/x-icon" />
     <title>Matt Sam | Environmental Website</title>
@@ -58,6 +49,53 @@
           <img src="./img/cloud.png" class="cloud moving-cloud-1" />
           <img src="./img/cloud.png" class="cloud moving-cloud-2" />
         </header>
+      </section>
+      <section class="benefits" id="benefits">
+        <header>
+          <h2>In Focus</h2>
+        </header>
+        <div class="cards">
+          <div class="card-gang">
+            <div class="card card-1">
+              <div class="image"></div>
+              <div class="content">
+                <div class="item-title">
+                  <h3>Nature</h3>
+                </div>
+                <div class="item-links"><a href="#">Our Plan for a Green Future</a><a href="#">Lorem ipsum dolor sit amet door</a><a href="#">Lorem ipsum dolor sit amet.</a></div>
+              </div>
+            </div>
+            <div class="card card-2">
+              <div class="image"></div>
+              <div class="content">
+                <div class="item-title">
+                  <h3>Our future</h3>
+                </div>
+                <div class="item-links"><a href="#">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint, at.</a><a href="#">Lorem, ipsum dolor.</a><a href="#">Lorem ipsum dolor sit amet.</a></div>
+              </div>
+            </div>
+          </div>
+          <div class="card-gang">
+            <div class="card card-3">
+              <div class="image"></div>
+              <div class="content">
+                <div class="item-title">
+                  <h3>Lovely plants</h3>
+                </div>
+                <div class="item-links"><a href="#">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur, et.</a><a href="#">Lorem, ipsum.</a><a href="#">Lorem ipsum dolor sit.</a></div>
+              </div>
+            </div>
+            <div class="card card-4">
+              <div class="image"></div>
+              <div class="content">
+                <div class="item-title">
+                  <h3>Blue Sky</h3>
+                </div>
+                <div class="item-links"><a href="#">Lorem, ipsum.</a><a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, iste.</a><a href="#">Lorem ipsum dolor sit.</a></div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
