add contact us section and footer to html

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
       <nav class="header-navigation">
         <div class="left-side">
           <h1 id="logo">
-            <a href="#logo">Dev</a>
-            <a href="#logo"><img src="./img/logo.png" alt="logo" /></a>
-            <a href="#logo">Matt</a>
+            <a href="#first-section">Dev</a>
+            <a href="#first-section"><img src="./img/logo.png" alt="logo" /></a>
+            <a href="#first-section">Matt</a>
           </h1>
         </div>
         <div class="right-side">
           <ul>
-            <li><a href="#locations">locations</a></li>
+            <li><a href="#locations">Damages</a></li>
             <li><a href="#benefits">benefits</a></li>
             <li><a href="#contact">contact</a></li>
           </ul>
@@ -34,7 +34,7 @@
       </nav>
     </header>
     <main>
-      <section class="first-section">
+      <section class="first-section" id="first-section">
         <h2>MAKING A WORLD OF DIFFERENCE</h2>
         <h3>A closer look at who we are, what we do and why we do it</h3>
         <button>read more</button>
@@ -97,6 +97,40 @@
           </div>
         </div>
       </section>
+      <section class="contact" id="contact">
+        <div class="contact-wrapper">
+          <header>
+            <h2>Contact US</h2>
+          </header>
+          <form>
+            <div class="form-name">
+              <label for="name">Name:</label>
+              <input type="text" name="name" id="name" maxlength="40">
+            </div>
+            <div class="form-email">
+              <label for="email">Email:</label>
+              <input type="email" name="email" id="email">
+            </div>
+            <button type="submit" class="form-submit">Submit</button>
+          </form>
+        </div>
+      </section>
     </main>
+    <footer>
+      <header>
+        <h2>
+          Environmental
+        </h2>
+        <p>
+          Copyright &copy; 2021 Mahdi Samiee, No rights reserved.
+        </p>
+    </header>
+    <ul>
+      <li><a href="https://wa.me/219109069962" title="Mahdi Samiee whatsapp" target="_blank"><img src="./icons/whatsapp.png" alt="whatsapp"></a></li>
+      <li><a href="https://t.me/MahdiSamieiFarisar" title="Mahdi Samiee telegram" target="_blank"><img src="./icons/telegram.png" alt="telegram"></a></li>
+      <li><a href="https://www.instagram.com/mahdi_samieefarisar" title="Mahdi Samiee instagram" target="_blank"><img src="./icons/instagram.png" alt="instagram"></a></li>
+      <li><a href="https://github.com/MattSam9" title="Mahdi Samiee github" target="_blank"><img src="./icons/github.png" alt="github"></a></li>
+    </ul>
+    </footer>
   </body>
 </html>
