add footer section to html

--- a/index.html
+++ b/index.html
@@ -119,11 +119,9 @@
     <footer>
       <header>
         <h2>
-          Environmental
+          Environmental Website Design
         </h2>
-        <p>
-          Copyright &copy; 2021 Mahdi Samiee, No rights reserved.
-        </p>
+        <h4>Designer info: Mahdi Samiee</h4>
     </header>
     <ul>
       <li><a href="https://wa.me/219109069962" title="Mahdi Samiee whatsapp" target="_blank"><img src="./icons/whatsapp.png" alt="whatsapp"></a></li>
@@ -131,6 +129,9 @@
       <li><a href="https://www.instagram.com/mahdi_samieefarisar" title="Mahdi Samiee instagram" target="_blank"><img src="./icons/instagram.png" alt="instagram"></a></li>
       <li><a href="https://github.com/MattSam9" title="Mahdi Samiee github" target="_blank"><img src="./icons/github.png" alt="github"></a></li>
     </ul>
+    <p>
+      Copyright &copy; 2021 Mahdi Samiee, No rights reserved.
+    </p>
     </footer>
   </body>
 </html>
